# superbitty

./: Cargo.toml  README.md
superbitty/: Cargo.toml
superbitty-macros/: Cargo.toml
superbitty-macros/src/: bit_field_compatible.rs  lib.rs  utils.rs
superbitty-macros/src/bit_field_compatible/: enum_bitfield.rs  mod.rs  struct_bitfield.rs
superbitty-macros/src/bitfields/: derives.rs  mod.rs  parse.rs
superbitty/src/: lib.rs  raw.rs
superbitty/tests/: bit_field_compatible.rs  bitfields.rs
superbitty/tests/ui/BitFieldCompatible/: complex_discriminant.stderr  not_enum.rs  not_enum.stderr  structs_and_unions.rs  structs_and_unions.stderr  uninhabited_enum.rs  uninhabited_enum.stderr  union.rs  union.stderr  with_negative_discriminant.rs  with_negative_discriminant.stderr  with_payload.stderr
superbitty/tests/ui/BitFieldCompatible/enums/: complex_discriminant.rs  complex_discriminant.stderr  with_negative_discriminant.stderr  with_payload.rs  with_payload.stderr
superbitty/tests/ui/BitFieldCompatible/structs/: duplicate_options.rs  duplicate_options.stderr  invalid_options.rs  invalid_options.stderr  invalid_raw_type.rs  invalid_raw_type.stderr  no_options.rs  (+5 more)
superbitty/tests/ui/bitfields/: invalid_attributes.rs  invalid_attributes.stderr  invalid_base_ty.rs  invalid_base_ty.stderr  malformed_derive_handled_by_rustc.rs  malformed_derive_handled_by_rustc.stderr  non_compatible_fields.rs  non_compatible_fields.stderr  shadowed_primitive.rs  shadowed_primitive.stderr  too_big_size.rs  too_big_size.stderr  unknown_derive.rs  unknown_derive.stderr
