[package]
name = "superbitty-macros"
version = "0.3.0"
edition = "2021"
authors = ["Chayim Refael Friedman"]
description = "A helper crate to the `bitfields` crate."
license = "MIT"
homepage = "https://github.com/ChayimFriedman2/superbitty"
repository = "https://github.com/ChayimFriedman2/superbitty"
readme = "../README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = "1.0.98"
