[package]
name = "superbitty"
version = "0.3.1"
edition = "2021"
authors = ["Chayim Refael Friedman"]
description = "A bitfields crate."
license = "MIT"
homepage = "https://github.com/ChayimFriedman2/superbitty"
repository = "https://github.com/ChayimFriedman2/superbitty"
readme = "../README.md"
categories = ["no-std"]
keywords = ["bitfields"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superbitty-macros = "0.3.0"

[dev-dependencies]
rustversion = "1.0.7"
trybuild = "1.0.63"
